# redgrou.se

./: README.md  rgrse  run-prod
.githooks/: pre-commit
backend/: Cargo.toml  bench_profile.sh  build.rs
backend/benches/: api_benchmarks.rs
backend/migrations/: 001_initial_schema.sql  002_add_last_accessed_at.sql  002_add_lifer_yeartick.sql  002_spatial_stratified_sampling.sql  002_upload_data_version.sql  003_add_edit_token.sql  003_upload_titles.sql  004_covering_index_tiles.sql  004_tick_bitmaps.sql  005_remove_notes_trip.sql  006_add_region_code.sql  006_scientific_name_not_null.sql  007_add_sightings_rtree.sql  008_add_vis_rank.sql  009_add_country_tick.sql  010_backfill_country_tick.sql  011_normalise_species.sql  012_recreate_rtree_triggers.sql  013_convert_uuids_to_blob.sql  014_drop_indexes.sql
backend/src/: api_constants.rs  bitmaps.rs  config.rs  db.rs  error.rs  filter.rs  handlers.rs  lib.rs  limits.rs  main.rs  pipeline.rs  proto.rs  sightings.rs  stats.rs  tiles.rs  upload.rs  zip_extract.rs
docs/: API.md  ARCHITECTURE.md  DATA_FORMAT.md  DEPLOYMENT.md  HACKING.md  SECURITY.md
frontend/: middleware.ts  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/[uploadId]/: page.tsx
frontend/src/app/privacy/: page.tsx
frontend/src/app/single/[uploadId]/: page.tsx
frontend/src/components/: actions-menu.tsx  client-only.tsx  cluster-popup.tsx  color-legend.tsx  query-builder.tsx  sightings-map.tsx  sightings-table.tsx  species-popup.tsx  stats-view.tsx  upload-dashboard.tsx  upload-form.tsx  version-banner.tsx
frontend/src/components/map/: cluster-controller.tsx  tile-source-manager.ts  use-map-instance.ts
frontend/src/components/stats/: timeline-charts.tsx
frontend/src/components/ui/: combobox.tsx  multi-combobox.tsx  toast.tsx
frontend/src/components/upload/: tick-controls.tsx
frontend/src/lib/: api.ts  colours.ts  countries.ts  filter-types.ts  regions.ts  sanitize.ts  schemas.ts  search-params.ts  sort-field.ts  species-api.ts  storage.ts  tick-filters.ts  uploads.ts  use-intersection-observer.ts  utils.ts  version-check.ts
frontend/src/lib/hooks/: fields.ts  upload.ts
frontend/src/lib/proto/: redgrouse_api.ts
proto/: redgrouse_api.proto
