[package]
name = "redgrouse"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["multipart"] }
csv-async = { version = "1.3", features = ["tokio"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
mvt = "0.10"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = { version = "0.5", features = ["limit", "timeout"] }
tower-http = { version = "0.6", features = ["cors", "trace", "set-header", "limit", "timeout", "catch-panic", "add-extension"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
subtle = "2.5"
country-boundaries = "1.2.0"
ts-rs = "10"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
