[package]
name = "redgrouse"
version = "0.1.0"
edition = "2021"
description = "Bird sighting analytics backend"
license = "MIT"
repository = "https://github.com/cdown/redgrouse"
readme = "../README.md"
keywords = ["birding", "sightings", "analytics", "map"]
categories = ["web-programming", "science"]
rust-version = "1.85"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["multipart"] }
csv-async = { version = "1.3", features = ["tokio"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
mvt = "0.10"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = { version = "0.5", features = ["limit", "timeout"] }
tower-http = { version = "0.6", features = ["cors", "trace", "set-header", "limit", "timeout", "catch-panic", "add-extension"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
smartstring = { version = "1", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
ipnet = "2.11"
sha2 = "0.10"
hex = "0.4"
subtle = "2.6"
country-boundaries = "1.2.0"
encoding_rs = "0.8"
urlencoding = "2"
prost = "0.14"
bytes = "1"
dashmap = "6"
base64 = "0.22"

[build-dependencies]
chrono = "0.4"
rustc_version = "0.4"
prost-build = "0.14"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.profiling]
inherits = "release"
debug = 2  # Full debug info for profiling
strip = false  # Don't strip symbols - needed for samply

[features]
default = []
disable-rate-limits = []

[[bench]]
name = "api_benchmarks"
harness = false
required-features = ["disable-rate-limits"]
